proposals/legacy-prod-scrape.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-legacy-prod-egress
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: legacy-prod.invalid
    - toFQDNs:
        - matchName: legacy-prod.invalid
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "9154"
              protocol: TCP
